css: fix customized scrollbars for webkit
A previous bug in LESS compiler has been fixed but result in a change
on how some rules are handled. Fix this.

--- a/content/media/css/luffy.code.less
+++ b/content/media/css/luffy.code.less
@@ -13,14 +13,14 @@ pre, code, code .amp, pre .amp {
     overflow-x: auto;
     pre { margin: 0; }
     /* Small scrollbar */
-    ::-webkit-scrollbar {
+    &::-webkit-scrollbar {
 	width: 3px;
 	height: 3px;
     }
-    ::-webkit-scrollbar-track-piece {
+    &::-webkit-scrollbar-track-piece {
 	-webkit-border-radius: 3px;
     }
-    ::-webkit-scrollbar-thumb:vertical, ::-webkit-scrollbar-thumb:horizontal {
+    &::-webkit-scrollbar-thumb:vertical, &::-webkit-scrollbar-thumb:horizontal {
 	height: 5px;
 	background-color: #666;
 	-webkit-border-radius: 3px;
